--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,9 @@
           </li>
           <% if logged_in? %>
             <li class="nav-item active dropdown">
+              <li class="nav-item">
+                <a class="nav-link" href="#">リンク</a>
+              </li>
               <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 メニュー
               </a>
