--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           color: #fff;
         }
         
-        div.bootstrap-datetimepicker-widget.dropdown-menu.usetwentyfour.top {
+        div.bootstrap-datetimepicker-widget.dropdown-menu.usetwentyfour {
           background-color: #111;
           color: #fff;
           width: 240px;
