--- a/app/views/messages/_inbox.html.erb
+++ b/app/views/messages/_inbox.html.erb
@@ -1,33 +1,52 @@
-<div class="mx-auto my-3 bg-dark">
+<div class="mx-auto my-3">
   <% if !@message_inbox.blank? %>
     <%= will_paginate @message_inbox, {:param_name => 'inbox_page', :class => 'pagination'} %>
-    <% @message_inbox.each do |message| %>
-      <% sendUser = send_user(message) %>
-      <div class="m-auto bg-dark">
-        <div class="m-auto row justify-content-start">
-          <% if sendUser.present? %>
-            <div class="m-1">
-              <% if sendUser.image.present? %>
-                <%= image_tag sendUser.image.to_s, class: "img-fluid img-thumbnail rounded m-1", :style => "max-width:60px;" %>
-              <% else %>
-                <%= image_tag "no-profile-image.png", class: "img-fluid img-thumbnail rounded m-1", :style => "max-width:60px;" %>
-              <% end %>
+    <%= form_with(model: @messages_inbox, url: user_messages_destroys_path(@user), local: true, method: :delete) do |f| %>
+      <% @message_inbox.each do |message| %>
+        <% sendUser = send_user(message) %>
+        <%= f.fields_for "messages[]", message do |msg| %>
+          <div class="m-auto bg-dark">
+            <div class="m-auto row justify-content-between">
+              <div class="row m-1">
+                <% if sendUser.present? %>
+                  <div class="row m-1">
+                    <% if sendUser.image.present? %>
+                      <%= image_tag sendUser.image.to_s, class: "img-fluid img-thumbnail rounded m-1", :style => "max-width:60px;" %>
+                    <% else %>
+                      <%= image_tag "no-profile-image.png", class: "img-fluid img-thumbnail rounded m-1", :style => "max-width:60px;" %>
+                    <% end %>
+                    <div class="m-1 font-weight-bold text-muted">From: <%= link_to sendUser.name, sendUser, class: "text-reset" %></div>
+                  </div>
+                <% else %>
+                  <div class="m-1">削除済みユーザ</div>
+                <% end %>
+              </div>
+              <div class="m-1"><%= msg.check_box :permit, :checked => false %></div>
             </div>
-            <div class="m-1 font-weight-bold text-muted">From:<%= link_to sendUser.name, sendUser, class: "text-reset" %></div>
-          <% end %>
-        </div>
-        <div class="m-2"><%= message.text %></div>
-        <div class="m-2 text-right font-weight-bold text-muted"><%= link_to l(message.updated_at, format: :short), edit_user_message_path(@user, message), remote: true, class: "text-reset" %></div>
-      </div>
+            <div class="m-2"><%= message.text %></div>
+            <div class="m-2 text-right font-weight-bold text-muted"><%= link_to l(message.updated_at, format: :short), edit_user_message_path(@user, message), remote: true, class: "text-reset" %></div>
+          </div>
+        <% end %>
+      <% end %>
+    <div class="m-auto row justify-content-between">
+      <div><%= will_paginate @message_inbox, {:param_name => 'inbox_page', :class => 'pagination'} %></div>
+      <div><%= f.submit "チェック付きの投稿を削除する", data: { confirm: "削除してよろしいですか？（取消できません）" }, class: "btn btn-lg btn-primary" %></div>
+    </div>
     <% end %>
-    <%= will_paginate @message_inbox, {:param_name => 'inbox_page', :class => 'pagination'} %>
   <% else %>
-    着信ナシ（陣内智則）
+    <p class="text-center">受信メッセージがありません</p>
   <% end %>
 </div>
 
 <script>
   $(function(){
-    $('.pagination a').attr('data-remote', 'true')
+    $('.pagination a').attr('data-remote', 'true');
+    $('.mail_search').attr('data-remote', 'true');
+    
+    $('.datepicker').datetimepicker({
+      format: 'YYYY-MM-DD HH:mm:00'
+    });
+    
+    $('.searchable').select2();
   });
 </script>
