--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,16 @@
       </button>
       <div class="collapse navbar-collapse" id="Navber">
         <ul class="navbar-nav mr-auto">
+          <% if logged_in? && (messages = Message.where(user_to: current_user).count - Message.where(user_to: current_user).where("edited_at < read_at").count) > 0 %>
+            <li class="nav-item active">
+              <%= link_to image_tag("arrived_message.png")+"#{messages}", current_user, class: "text-light text-decoration-none" %>
+            </li>
+          <% end %>
           <li class="nav-item active">
             <%= link_to "ホーム", root_path, class: "nav-link" %>
           </li>
           <% if logged_in? %>
             <li class="nav-item active dropdown">
-              <li class="nav-item">
-                <a class="nav-link" href="#">リンク</a>
-              </li>
               <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 メニュー
               </a>
