--- a/app/views/messages/_outbox.html.erb
+++ b/app/views/messages/_outbox.html.erb
@@ -24,13 +24,13 @@
               <div class="m-1"><%= msg.check_box :permit, :checked => false %></div>
             </div>
             <div class="m-2"><%= message.text %></div>
-            <div class="m-2 text-right font-weight-bold text-muted"><%= link_to l(message.updated_at, format: :short), edit_user_message_path(@user, message), remote: true, class: "text-reset" %></div>
+            <div class="m-2 text-right font-weight-bold text-muted"><%= link_to l(message.edited_at, format: :short), edit_user_message_path(@user, message), remote: true, class: "text-reset" %></div>
           </div>
         <% end %>
       <% end %>
     <div class="m-auto row justify-content-between">
       <div><%= will_paginate @message_outbox, {:param_name => 'outbox_page', :class => 'pagination'} %></div>
-      <div><%= f.submit "チェック付きの投稿を削除する", data: { confirm: "削除してよろしいですか？（取消できません）" }, class: "btn btn-lg btn-primary" %></div>
+      <div><%= f.submit "まとめて削除する", data: { confirm: "削除してよろしいですか？（取消できません）" }, class: "btn btn-lg btn-primary" %></div>
     </div>
     <% end %>
   <% else %>
@@ -46,7 +46,5 @@
     $('.datepicker').datetimepicker({
       format: 'YYYY-MM-DD HH:mm:00'
     });
-    
-    $('.searchable').select2();
   });
 </script>
