--- a/app/views/tournaments/_form.html.erb
+++ b/app/views/tournaments/_form.html.erb
@@ -23,9 +23,9 @@
   <div class="form-group">
     <%= f.label :game_title, class: "label-#{yield(:class_text)}" %>
     <% if controller.action_name == 'new' %>
-      <%= f.select :game_title, ["ニンテンドウオールスター！大乱闘スマッシュブラザーズ", "大乱闘スマッシュブラザーズDX", "大乱闘スマッシュブラザーズX", "大乱闘スマッシュブラザーズ for Nintendo 3DS", "大乱闘スマッシュブラザーズ for Wii U", "大乱闘スマッシュブラザーズ SPECIAL"], {:include_blank => true}, class: "form-control" %>
+      <%= f.select :game_title, Tournament.game_titles.keys.to_a, {:include_blank => true}, class: "form-control" %>
     <% else %>
-      <%= f.select :game_title, ["ニンテンドウオールスター！大乱闘スマッシュブラザーズ", "大乱闘スマッシュブラザーズDX", "大乱闘スマッシュブラザーズX", "大乱闘スマッシュブラザーズ for Nintendo 3DS", "大乱闘スマッシュブラザーズ for Wii U", "大乱闘スマッシュブラザーズ SPECIAL"], {:include_blank => true}, value: @tournament.game_title, class: "form-control" %>
+      <%= f.select :game_title, Tournament.game_titles.keys.to_a, {:include_blank => true}, value: @tournament.game_title, class: "form-control" %>
     <% end %>
   </div>
   
