finish link-color-white

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,6 +94,21 @@
           background-color: #444;
         }
         
+        a.nav-link.text-reset.font-weight-bold.active,
+        #userpageDropdown[aria-expanded="true"],
+        div.card,
+        div.dropdown-menu.show {
+          background-color: #224;
+        }
+        
+        a.dropdown-item,
+        a.dropdown-item.font-weight-bold {
+          color: #fff;
+        }
+        
+        a.dropdown-item.font-weight-bold:hover {
+          color: #000;
+        }
 	    
 	  </style>
   </head>
