--- a/app/views/messages/_search_inbox.html.erb
+++ b/app/views/messages/_search_inbox.html.erb
@@ -1,10 +1,6 @@
 <%= form_with(url: user_path(@user), method: :get) do |fo| %>
   <div class="m-auto row justify-content-between align-items-center col-lg">
-    <div>
-      <%= fo.label "差出人" %><br>
-      <%= select_tag :user_id, options_from_collection_for_select(User.where.not(id: @user), :id, :name), include_blank: true, class: "form-control searchable" %>
-    </div>
-    <div>
+    <div class="col-md-5">
       <%= fo.label "From"%>
       <div class="input-group" data-target-input="nearest">
         <%= fo.text_field :from, id: "from_time_in", class: "form-control datepicker", data: {target: "#from_time_in"} %>
@@ -13,8 +9,8 @@
         </div>
       </div>
     </div>
-    <div>～</div>
-    <div>
+    <div class="col-md-2 d-none d-md-block text-center">～</div>
+    <div class="col-md-5">
       <%= fo.label "To" %>
       <div class="input-group" data-target-input="nearest">
         <%= fo.text_field :to, id: "to_time_in", class: "form-control datepicker", data: {target: "#to_time_in"} %>
@@ -23,11 +19,19 @@
         </div>
       </div>
     </div>
+    <div class="col-md-4">
+      <%= fo.label "差出人" %><br>
+      <%= select_tag :user_id, options_from_collection_for_select(User.where.not(id: @user), :id, :name), include_blank: true, class: "form-control searchable" %>
+    </div>
+    <div class="col-md-8">
+      <%= fo.label "本文" %>
+      <%= fo.text_field :text, class: "form-control" %>
+    </div>
+    <div class="col-12">
+      <%= fo.submit "検索する", class: "btn btn-primary btn-block my-2 mail_search" %>
+    </div>
   </div>
-  <%= fo.label "本文" %>
-  <%= fo.text_field :text, class: "form-control" %>
   <%= fo.hidden_field :inbox, value: 'inbox_search' %>
-  <%= fo.submit "検索する", class: "btn btn-primary btn-block my-2 mail_search" %>
 <% end %>
 
 <script>
