--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -25,7 +25,7 @@
             <%= fo.label Tournament.human_attribute_name :status %>
             <%= fo.select :status, Tournament.statuses.keys.to_a, {include_blank: true}, class: "form-control" %>
           </div>
-          <div class="col-lg-5">
+          <div class="col-md-5">
             <%= fo.label "From"%>
             <div class="input-group" data-target-input="nearest">
               <%= fo.text_field :from, id: "from_time_in", class: "form-control datepicker", data: {target: "#from_time_in"} %>
@@ -34,8 +34,8 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-2 d-none d-lg-block text-center">～</div>
-          <div class="col-lg-5">
+          <div class="col-md-2 d-none d-md-block text-center">～</div>
+          <div class="col-md-5">
             <%= fo.label "To" %>
             <div class="input-group" data-target-input="nearest">
               <%= fo.text_field :to, id: "to_time_in", class: "form-control datepicker", data: {target: "#to_time_in"} %>
@@ -44,14 +44,16 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-12">
+            <%= fo.submit "検索する", class: "btn btn-primary btn-block my-3" %>
+          </div>
         </div>
-        <%= fo.submit "検索する", class: "btn btn-primary btn-block my-2" %>
       <% end %>
     </div>
   </div>
   
   <div class="table-responsive-md">
-    <table class="table table-hover text-nowrap table-responsive" id="table-users">
+    <table class="table table-hover text-nowrap table-responsive-md" id="table-users">
       <thead>
         <tr>
           <th colspan="4"><%= Tournament.human_attribute_name :name %></th>
