--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,20 +3,23 @@
     <%= link_to "Super Smash Bros. Tournament App", root_path, id: "logo" %>
     
     <nav>
+      <% if logged_in? && (messages = Message.where(user_to: current_user).count - Message.where(user_to: current_user).where("edited_at < read_at").count) > 0 %>
+        <li class="nav-item active">
+          <%= link_to image_tag("arrived_message.png")+"#{messages}", current_user, class: "text-light text-decoration-none" %>
+        </li>
+      <% end %>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navber" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="Navber">
         <ul class="navbar-nav mr-auto">
-          <% if logged_in? && (messages = Message.where(user_to: current_user).count - Message.where(user_to: current_user).where("edited_at < read_at").count) > 0 %>
-            <li class="nav-item active">
-              <%= link_to image_tag("arrived_message.png")+"#{messages}", current_user, class: "text-light text-decoration-none" %>
-            </li>
-          <% end %>
           <li class="nav-item active">
             <%= link_to "ホーム", root_path, class: "nav-link" %>
           </li>
           <% if logged_in? %>
+            <li class="nav-item active">
+              <%= link_to "ユーザ一覧", users_path, class: "nav-link" %>
+            </li>
             <li class="nav-item active dropdown">
               <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 メニュー
