--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,28 +1,41 @@
 <% provide(:title, 'All Users') %>
-<h1>ユーザー一覧</h1>
+<% if params[:search].blank? %>
+  <h1>ユーザー一覧</h1>
+<% else %>
+  <h1>検索結果</h1>
+<% end %>
 
-<div class="col-lg-10 offset-lg-1">
+<div class="col-lg-10 offset-lg-1 table-responsive">
+  <div class="text-right">
+    <p>ユーザ検索</p>
+    <%= form_tag(users_path, :method => 'get') do %>
+      <%= text_field_tag :search %>
+      <%= submit_tag '検索', :name => nil, :class => 'btn btn-primary' %>
+    <% end %>
+  </div>
   <%= will_paginate %>
-  <table class="table table-condensed table-hover" id="table-users">
+  <table class="table text-nowrap table-hover" id="table-users">
     <thead>
       <tr>
-        <th><%= User.human_attribute_name :name %></th>
-        <th><%= User.human_attribute_name :image %></th>
-        <th></th>
+        <th class="" style="width:20%;"><%= User.human_attribute_name :name %></th>
+        <th style="width:70%;"><%= User.human_attribute_name :description %></th>
+        <th style="width:10%;"></th>
       </tr>
     </thead>
 
+    <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to user.name, user %></td>
-        <td>
+        <td style="width:20%;">
           <% if user.image? %>
             <%= image_tag user.image.to_s, class: "img-fluid img-thumbnail rounded", :style => "max-width:100px;"  %>
           <% else %>
             <%= image_tag "no-profile-image.png", class: "img-fluid img-thumbnail rounded", :style => "max-width:100px;" %>
           <% end %>
+          <%= link_to user.name, user, class: "text-reset font-weight-bold text-nowrap" %>
         </td>
-        <td>
+        <td style="width:70%;"><p class="d-inline-block text-truncate" style="max-width:540px"><%= user.description %></p></td>
+        <td style="width:10%;">
           <% if current_user.admin? && !current_user?(user) %>
             <%= link_to "削除", user, method: :delete,
                 data: { confirm: "削除してよろしいですか？" },
@@ -31,6 +44,7 @@
         </td>
       </tr>
     <% end %>
+    </tbody>
   </table>
   <%= will_paginate %>
 </div>
